--- a/gb/24/6/3/n14263229.md
+++ b/gb/24/6/3/n14263229.md
@@ -7,7 +7,7 @@
 </h6>
 <hr>
 <p>【大纪元2024年06月03日讯】（大纪元记者吴旻洲台湾台北报导）总统赖清德3日接见世界和平基金会主席莫拉韦茨（Uwe Morawetz），他表示，世界和平基金会推动“台湾桥梁计划”，明年起将陆续邀请物理、医学、化学、经济共6位诺贝尔奖得主来台访问，将有助加深台湾与国际的连结、提升台湾的全球影响力。</p>
-<figure id="attachment_14263230" aria-describedby="caption-attachment-14263230" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14263230-686444.jpg"><img class="size-medium wp-image-14263230" src="https://i.epochtimes.com/assets/uploads/2024/06/id14263230-686444-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-14263230" class="wp-caption-text">总统赖清德（右）3日在总统府接见世界和平基金会主席莫拉韦茨（左）。（中央社）</figcaption></figure>
+<figure id="attachment_14263230" aria-describedby="caption-attachment-14263230" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14263230-686444.jpg"><img loading="lazy" decoding="async" class="size-medium wp-image-14263230" src="https://i.epochtimes.com/assets/uploads/2024/06/id14263230-686444-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-14263230" class="wp-caption-text">总统赖清德（右）3日在总统府接见世界和平基金会主席莫拉韦茨（左）。（中央社）</figcaption></figure>
 <p>赖清德表示，世界和平基金会的信念主张教育是和平的基础，透过与大学开设高级课程和研究，协助各国政府、欧盟及联合国展开和平对话。从2003年到现在，已经在东南亚地区举办超过800场活动，邀集诺贝尔奖得主、知名艺术家，在学术合作、文化交流等面向，都有丰硕成果。</p>
 <p>他表示，感谢世界和平基金会选择来到台湾，一起促进教育交流、世界和平的目标，台湾桥梁计划预计从明年开始，陆续邀请物理、医学、化学、经济等6名诺贝尔奖得主来台访问；他相信，这项计划不仅能够造福台湾的学子，也将加深台湾与国际连结，提升台湾的全球影响力。</p>
 <p>赖清德说，台湾位处地缘政治中心，是印太地区重要的民主国家，藉这机会他要感谢台大成立国际政经学院，为台湾培育具全球政经视野的领导人才。</p>
@@ -25,33 +25,32 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/24/n14257013.md#1">赖清德：国军全程掌握共军动态 民众可安心</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/26/n14258037.md#1">赖清德盼谅解艺人被迫表态</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258311.md#1">赖清德见美众院外委会主席 盼深化台美关系</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263196.md#1">六四35周年前夕 陆委会吁中共倾听民意 实行民主制度</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263200.md#1">政府当海巡靠山 卓荣泰：遇不法该驱逐就驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285055.md#1">台裔美籍科学家获NASA颁发最高荣誉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284976.md#1">德国会外委会通过决议挺台 台外交部诚挚感谢</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/27/n11350548.md#1" target="_blank">王友群：陈独秀等10位中共党魁的最后结局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/1/n11424188.md#1" target="_blank">前加拿大世姐：我是如何改变对法轮功看法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/10/n10902151.md#1" target="_blank">龙延：中共道路是魔鬼的选择</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/18/n3685199.md#1" target="_blank">难以置信的事实</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258805.md#1">【未解之谜】遇难总能呈祥？盘点蒋介石身边的那些高人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261254.md#1">【未解之谜】盘点宇宙的终极命运 只有一种人可以逃脱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258188.md#1">摄生高人孙思邈的神通与道行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/23/n14232406.md#1">【古韵流芳】既是婆媳、更是知音的蕉园才女</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/20/n14254177.md#1">【古道人生】命中利北不利南 在南方一试难中 在北方则隆隆直上</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261793.md#1">【新闻五人行】小粉红出国才知道 美国人什么样</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262711.md#1">【人物真相】“刀把子”林锐 或掌控民营企业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262401.md#1">【时事军事】三次大战有多远 看俄乌冲突升级</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261722.md#1">在美食广场打击非会员后 Costco宣布两好消息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262136.md#1">神秘行星在太空出双入对 颠覆人类认识</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262193.md#1">蘑菇不仅是超级食品 研究发现还有一大好处</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261784.md#1">范冰冰晒半山豪宅 柜中饮品显示她已移居香港</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262219.md#1">汤唯晒与孔刘合照 粉丝惊喜直呼画面美</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262195.md#1">“那英跑调”登热搜榜第一 《歌手5》大洗牌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262423.md#1">《沙丘2》2024目前最卖座 导演却失望 盼被取代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261755.md#1">泰勒丝身价7个月涨2亿美元 净资产达13亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/24/n14257411.md#1">老化导致头发脱落、变白 7种营养素让头发回春</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258609.md#1">西葫芦：夏季餐桌上的清新之选</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262424.md#1">研究：柳橙皮有助于改善心脏健康</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259422.md#1">【一箪食】玫瑰豆腐乳煎鸡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262341.md#1">绿叶蔬菜保存 简单4诀窍延长保鲜期</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289679.md#1">2024年美国生活最昂贵和最便宜的十个州</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289693.md#1">力压张若昀和胡歌 朱一龙获陆剧小生演技冠军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290096.md#1">油管史上第一人 网红MrBeast频道订阅数破3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289755.md#1">张艺兴演唱会上为母亲庆生 一口误引全场笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290376.md#1">美国癌症协会：4成癌症病例与生活习惯有关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287768.md#1">物价上涨如何省钱？养成19个购物习惯超实用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285229.md#1">研究：咖啡有助于抵消与年龄有关的肌肉流失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281710.md#1">吸食大麻健康危害大 七招让你远离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289225.md#1">观赏奥运要小心 看错比赛肚子恐怕会胖一圈</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/3/n14263229.htm">台湾桥梁计划 明年邀6位诺贝尔奖得主访台</a></p><hr>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/6/3/n14263229.htm">台湾桥梁计划 明年邀6位诺贝尔奖得主访台</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263229.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
