--- a/gb/24/6/10/n14267462.md
+++ b/gb/24/6/10/n14267462.md
@@ -7,9 +7,9 @@
 </h6>
 <hr>
 	<p>【大纪元2024年06月10日讯】（大纪元记者李梅橙县报导）周六（6月8日），前总统川普来到橙县新港海滩市（Newport Beach）为竞选第47届总统筹款，千余名居民带着旗帜和展板站在其车队经过之处等待，声援川普竞选，并提前祝他生日快乐。</p>
-<figure id="attachment_14267474" aria-describedby="caption-attachment-14267474" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14267474-IMG_42062-1.jpg"><img class="size-large wp-image-14267474" src="https://i.epochtimes.com/assets/uploads/2024/06/id14267474-IMG_42062-1-600x388.jpg" alt="" width="600" b="388" /></a><figcaption id="caption-attachment-14267474" class="wp-caption-text">2024年6月8日，前总统川普来加州橙县新港海滩市（Newport Beach）为竞选第47届总统筹款，居民们在路边等待川普车队经过。（李梅／大纪元）</figcaption></figure>
+<figure id="attachment_14267474" aria-describedby="caption-attachment-14267474" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14267474-IMG_42062-1.jpg"><img decoding="async" class="size-large wp-image-14267474" src="https://i.epochtimes.com/assets/uploads/2024/06/id14267474-IMG_42062-1-600x388.jpg" alt="" width="600" b="388" /></a><figcaption id="caption-attachment-14267474" class="wp-caption-text">2024年6月8日，前总统川普来加州橙县新港海滩市（Newport Beach）为竞选第47届总统筹款，居民们在路边等待川普车队经过。（李梅／大纪元）</figcaption></figure>
 <p>从当天早上6点多钟，就开始有橙县民众在路边守候，人群主要集中在Jamboree路到海岸高速公路交界处。在上午的绵绵细雨之中，集会者仍然很兴奋地挥动旗帜、高呼“USA”和“我们爱川普”。</p>
-<figure id="attachment_14267475" aria-describedby="caption-attachment-14267475" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14267475-IMG_40702-1.jpg"><img class="size-large wp-image-14267475" src="https://i.epochtimes.com/assets/uploads/2024/06/id14267475-IMG_40702-1-600x346.jpg" alt="" width="600" b="346" /></a><figcaption id="caption-attachment-14267475" class="wp-caption-text">2024年6月8日，前总统川普来加州橙县新港海滩市（Newport Beach）为竞选第47届总统筹款，居民们在海岸高速路边等待川普车队经过。（李梅／大纪元）</figcaption></figure>
+<figure id="attachment_14267475" aria-describedby="caption-attachment-14267475" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14267475-IMG_40702-1.jpg"><img decoding="async" class="size-large wp-image-14267475" src="https://i.epochtimes.com/assets/uploads/2024/06/id14267475-IMG_40702-1-600x346.jpg" alt="" width="600" b="346" /></a><figcaption id="caption-attachment-14267475" class="wp-caption-text">2024年6月8日，前总统川普来加州橙县新港海滩市（Newport Beach）为竞选第47届总统筹款，居民们在海岸高速路边等待川普车队经过。（李梅／大纪元）</figcaption></figure>
 <p>川普此次是来参加企业家、亿万富翁帕默·拉基（Palmer Luckey）以及健康保险分销商约翰·沃德（John Word）夫妇主持的午宴，其车队在12:40左右经过。</p>
 <p>丹纳角市居民史蒂夫（Steve）站在最佳位置。“我看到川普坐在车里，看到他的脸，他在向我们挥手。”他兴奋地说，“我热爱美国，希望子孙后代能在一个自由的国家长大——不是第三世界，不是极权国家，不是全球化的政府。”</p>
 <p>为什么这么多人在这里等待川普？居民詹妮弗·麦克因特（Jennifer Mcinter）认为：“川普相信美国梦，我们也相信；川普相信宪法，我们也相信；川普信神，我们也信。”</p>
@@ -30,28 +30,28 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264187.md#1">拜登川普本月都将到南加州参加筹款活动</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/27/n9996650.md#1" target="_blank">揭秘“四一二反革命政变”的历史真相（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/6/n11238180.md#1" target="_blank">感恩法轮功师父 教我做个善良人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/20/2/7/n11852128.md#1">《刘伯温碑记》点明避开瘟疫的真言</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11246440.md#1" target="_blank">中国维权律师彭永峰修炼法轮功 见证神奇</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265705.md#1">【未解之谜】阿南德最新预言：相同天象再现 人间将有异动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263533.md#1">研究过上千例濒死体验 美前牧师谈死后世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/7/20/n14038182.md#1">没有艾草的加持不是好端午</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266424.md#1">【时事金扫描】今年高考最难 哪些大学留学触雷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266340.md#1">【菁英论坛】中国经济濒临崩溃 拜登绝非瞎说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266355.md#1">【马克时空】中俄合作突生变 或影响乌战场格局</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266633.md#1">中国经济衰退 多省房价跌破千元/平方米</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266630.md#1">分析：李强开会释放中国房地产不妙信号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266541.md#1">大陆银行职员买千万别墅 被前儿媳举报</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266834.md#1">女版陆片《战狼》翻车 预售票房仅4.6万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266019.md#1">松冈茉优与有冈大贵结婚 两人都是童星出身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266828.md#1">杨颖遭软封杀9个月 两个迹象显示将获解封</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265982.md#1">韩国新人朴柱炫新片挑大梁 压力太大送急诊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266338.md#1">邓超孙俪俏皮发文 甜蜜庆祝两人结婚14周年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167203.md#1">药学博士：自幼伴随我的鼻敏感和哮喘消失了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/1/n13750290.md#1">注意五个吃粽小技巧 窈窕过端午</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265616.md#1">“不死癌症”致关节变形疼痛 9类超级食物抗炎镇痛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/18/n14252931.md#1">哈佛教授采纯肉饮食 抗抑郁降血糖 2类疾病最适合</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264865.md#1">冬病夏治更好！手脚冰冷、易感冒者现在快做1件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289679.md#1">2024年美国生活最昂贵和最便宜的十个州</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289693.md#1">力压张若昀和胡歌 朱一龙获陆剧小生演技冠军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290096.md#1">油管史上第一人 网红MrBeast频道订阅数破3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289755.md#1">张艺兴演唱会上为母亲庆生 一口误引全场笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290376.md#1">美国癌症协会：4成癌症病例与生活习惯有关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287768.md#1">物价上涨如何省钱？养成19个购物习惯超实用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285229.md#1">研究：咖啡有助于抵消与年龄有关的肌肉流失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281710.md#1">吸食大麻健康危害大 七招让你远离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289225.md#1">观赏奥运要小心 看错比赛肚子恐怕会胖一圈</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/10/n14267462.htm">前总统川普结束加州筹款 上千居民迎候声援</a></p><hr>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/6/10/n14267462.htm">前总统川普结束加州筹款 上千居民迎候声援</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267462.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
